test-opensearch-serverless-network-policy.yaml
apiVersion: opensearchserverless.aws.upbound.io/v1beta1
kind: SecurityPolicy
metadata:
  name: test-network-policy
  annotations:
    crossplane.io/external-name: test-network-policy
spec:
  forProvider:
    region: us-east-2
    type: network
    description: Network policy for test OpenSearch Serverless collections - public access
    policy: |
      [
        {
          "Rules": [
            {
              "ResourceType": "collection",
              "Resource": [
                "collection/test-collection"
              ]
            }
          ],
          "AllowFromPublic": true
        }
      ]
  providerConfigRef:
    name: default
